# ulauncher-list-keywords

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  manifest.json  pyproject.toml  versions.json
.github/workflows/: python.yaml
tests/: test_load_data.py
